--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -195,7 +195,7 @@ img {
           border-radius: 4px;
 }
 
-img[title="Emerald"] {
+img[title="NEHA RAI"] {
     box-shadow: 0 2px 6px #ddd;
   }
 
